--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 		"composer/installers": "~1.0"
 	},
 	"suggest": {
+		"anstech-fuelphp/profile": "User profiles",
 		"anstech-fuelphp/rest": "Enables authentication for API endpoints"
 	}
 }
